fix: replace back button image and adjust its height for better visibility

--- a/components/Overlay/overlay.module.scss
+++ b/components/Overlay/overlay.module.scss
@@ -14,15 +14,11 @@
     z-index: 12;
     top: 1rem;
     left: 1rem;
-    height: 40px;
+    height: 70px;
     cursor: pointer;
 
-    button {
-      border: none;
-
-      img {
-        height: 100%;
-      }
+    img {
+      height: 100%;
     }
   }
 }
